changed bootstrap elements to MDC

--- a/app/src/main/assets/www/styles.css
+++ b/app/src/main/assets/www/styles.css
@@ -10,5 +10,18 @@ html, body {
 }
 
 #counter {
-    font-size: 7em;
+    font-size: 7rem;
+}
+
+.app-fab--absolute {
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
+}
+  
+@media(min-width: 1024px) {
+    .app-fab--absolute {
+        bottom: 1.5rem;
+        right: 1.5rem;
+    }
 }
