--- a/app/src/main/assets/www/styles.css
+++ b/app/src/main/assets/www/styles.css
@@ -2,11 +2,18 @@ html, body {
     height: 100%;
 }
 
-#app_space {
+.app-body {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.app-main {
     display: flex;
-    height: 100%;
     align-items: center;
     justify-content: center;
+    overflow: auto;
+    height: 100%;
 }
 
 #counter {
