--- a/app/src/main/assets/www/styles.css
+++ b/app/src/main/assets/www/styles.css
@@ -9,6 +9,10 @@ html, body {
 }
 
 .app-main {
+    height: 100%;
+}
+
+#counter_space {
     display: flex;
     align-items: center;
     justify-content: center;
